log
Sun May 15 00:01:04 HSP 2022: 
 tests:  0|5
total_score: 0/70
5f76276
Sun May 15 00:04:00 HSP 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|5
total_score: 5/70
b1153e0
Sun May 15 00:09:07 HSP 2022: 
 sudoku.c | 19 +++++++++++++------
 1 file changed, 13 insertions(+), 6 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
e2b8467
Sun May 15 00:09:31 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4c0c600
Sun May 15 00:11:37 HSP 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
4d0c13a
Sun May 15 00:12:23 HSP 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function 'get_adj_nodes':
sudoku.c:60:25: error: 'aux' may be used uninitialized in this function [-Werror=maybe-uninitialized]
         if (aux->sudo[i][j] == 0)
             ~~~~~~~~~~~~^~~
cc1.exe: all warnings being treated as errors
Compilation failed
38fad67
Sun May 15 00:12:41 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
05bc01b
Sun May 15 01:01:08 HSP 2022: 
 sudoku.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:7: error: unused variable 'aux2' [-Werror=unused-variable]
   int aux2;
       ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
87a7b6a
Sun May 15 01:01:24 HSP 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
e1266d3
Sun May 15 01:02:01 HSP 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ef1bd30
Sun May 15 01:04:26 HSP 2022: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
4cc6513
Sun May 15 01:04:54 HSP 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
882fca9
Sun May 15 01:06:30 HSP 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
9233c52
Sun May 15 01:08:30 HSP 2022: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
f4ea671
Sun May 15 01:12:08 HSP 2022: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
51d424c
